# ComplexBeautiesExplorer

./: .gitignore  LICENSE-3RD-PARTY  pyproject.toml  requirements.txt  setup.cfg  setup.py
cmplxbe/: __init__.py
cmplxbe/core/: coloring.py
cmplxbe/gui/: ComplexBeautiesExplorer.py  MainWindow.ui  UiDesigner.py  UiMainWindow.py  resources.qrc  resources_rc.py
