# coding: utf-8
# vim: set ai ts=4 sw=4 sts=0 noet pi ci

# Copyright © 2020 René Wirnata.
# This file is part of Complex Beauties Explorer (CmplxBE).
#
# CmplxBE is free software: you can redistribute it and/or modify it under the
# terms of the GNU General Public License as published by the Free Software
# Foundation, either version 3 of the License, or (at your option) any later
# version.
#
# CmplxBE is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
# A PARTICULAR PURPOSE. See the GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License along with
# CmplxBE. If not, see <http://www.gnu.org/licenses/>.

[metadata]
name = cmplxbe
author = René Wirnata
author_email = rene.wirnata@pandascience.net

summary = plot and analyze complex functions
description-file = README.md
description-content-type = text/markdown
home-page = https://github.com/PandaScience/ComplexBeautiesExplorer
license = GPLv3+

python-requires = >=3

keywords = complex function phaseplot domain coloring analysis gui

classifier =
	# Development Status :: 5 - Production/Stable
	Development Status :: 3 - Alpha
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3 :: Only
	Environment :: Console
	Environment :: X11 Applications :: Qt
	Intended Audience :: Education
	Intended Audience :: Science/Research
	Natural Language :: English
	Operating System :: OS Independent
	Topic :: Scientific/Engineering :: Visualization

[files]
packages = cmplxbe

[entry_points]
console_scripts =
	cmplxbe = cmplxbe.gui.ComplexBeautiesExplorer:main
	ComplexBeautiesExplorer = cmplxbe.gui.ComplexBeautiesExplorer:main


[flake8]
ignore = E226, W503
max-line-length = 79
max-complexity = 18
select = B,C,E,F,W,T4,B9
exclude = .git,build,dist,Designer_*,UiDesigner.py
